--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,26 @@
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
+permalink:           /:year/:title
 relative_permalinks: true
 
+# Dependencies
+markdown:         redcarpet
+#highlighter:      pygments
+
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               erikwb.net
+tagline:             'Whatever escapes'
+description:         'Just some of my ramblings.'
+url:                  http://localhost:4000
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Erik Wessel-Berg
+  url:               https://twitter.com/erikwb
+  email:             erik@wez.no
 
 # Custom vars
 version:             1.0.0
