Litt for mye fiksing
Gått til kramdown
Laget tags, categories, archive
Lagt inn previous og next

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ permalink:           /:year/:title
 relative_permalinks: true
 
 # Dependencies
-markdown:         redcarpet
+markdown:         kramdown
+kramdown:
+    input: GFM
 #highlighter:      pygments
 
 # Setup
