--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ description:         'Just some of my ramblings.'
 url:                  http://erikwb.net
 baseurl:             ''
 paginate:            5
+safe:                false
 
 # About/contact
 author:
